--- a/WebDev-DevOps/week1-htmlcss-assign/assign2/index.html
+++ b/WebDev-DevOps/week1-htmlcss-assign/assign2/index.html
@@ -32,11 +32,26 @@
 
         <p id="trusted">Trusted by 10,000+ leading businesses</p>
         <div class="companies">
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
+          <img height="32em" src="src/cisco-white.svg" alt="" />
+          <img height="32em" src="src/deutsche-telekom-white.svg" alt="" />
+          <img height="32em" src="src/walt-disney-studios-white.svg" alt="" />
+          <img height="32em" src="src/nvidia-white.svg" alt="" />
+          <img height="32em" src="src/salesforce-white.svg" alt="" />
+        </div>
+        <div class="rating">
+          <img src="src/star.svg" alt="" height="20px" />
+          <img src="src/star.svg" alt="" />
+          <img src="src/star.svg" alt="" />
+          <img src="src/star.svg" alt="" />
+          <img src="src/star.svg" alt="" />
+          <span style="padding-left: 0.5em">4.5 stars and 1,059+ reviews </span>
+        </div>
+        <div class="footer">
+          <img
+            src="src/agents-platform.webp"
+            alt=""
+            style="border-radius: 0.5em; width: 40vw; overflow: hidden"
+          />
         </div>
       </div>
       <!-- FORMS -->
