htmlcss asign 1 Eleven Labs Login Page v2

--- a/WebDev-DevOps/week1-htmlcss-assign/assign1/index.html
+++ b/WebDev-DevOps/week1-htmlcss-assign/assign1/index.html
@@ -28,7 +28,7 @@
       <!-- Google sign in -->
       <div class="card-boxes box1">
         <img src="src/google-icon-logo-svgrepo-com.svg" alt="" height="20" />
-        <span>Sign up with Google</span>
+        <span style="text-align: center">Sign up with Google</span>
       </div>
       <hr />
 
